clang: ignore overload candidate completions after ->

CXCursor_OverloadCandidate apparently signifies candidates in an
overload set. Such completions are not useful after a pointer to an
object and an arrow. libclang probably offers them only by mistake.

BUG: 468605
FIXED-IN: 5.13.231200